--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "config-lite": "^2.1.0",
     "connect-mongo": "^2.0.1",
     "cross-env": "^5.2.0",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-formidable": "^1.2.0",
     "express-session": "^1.15.6",
     "express-winston": "^3.0.1",
     "marked": "^0.5.1",
+    "mime": "^2.3.1",
     "moment": "^2.22.2",
     "mongolass": "^4.4.0",
     "objectid-to-timestamp": "^1.3.0",
